<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Set Kode"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:text="@string/app_setkode" />

            <TextView
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Set Kunci"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/black"
                android:text="@string/app_setkunci"/>

            <TextView
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Mengirim Pesan"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:text="@string/app_buatpesan" />

            <TextView
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Membuka Pesan"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:text="@string/app_bacapesan" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>